# multi-agent-sql

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  setup_bird.sh  setup_livraria.sh
app/: api.py  config.py  context.py  llm_models.py  main.py  redis_client.py  redis_orm.py  toon_utils.py
app/agents/: __init__.py  context.py  generator.py  interpreter.py  llm_timeout.py  mapper.py  single_agent.py  single_workflow.py  supervisor.py  telemetry.py  tools.py  validator.py  workflow.py
app/analytics/: __init__.py  db.py  feedback.py
app/auth/: __init__.py  create_user.py  crypto.py  db.py  dependencies.py  models.py  passwords.py  routes.py  sessions.py
app/benchmarks/: __init__.py  analyzer.py  cli.py  datasets.py  errors.py  metrics.py  run_question.py  runner.py  types.py
app/connections/: __init__.py  store.py
app/db/: __init__.py  adapter.py  connection.py  dialects.py  metadata.py  mysql_adapter.py  postgres_adapter.py  schema_prefetch.py  sql_guard.py  utils.py  value_sanitize.py
app/prompts/: __init__.py  defaults.py
app/templates/: index.html  login.html
benchmark_results/: bird-20251109-092813.json  bird-20251109-122151.json  bird-20251109-171850.json  bird-20251109-175139.json  bird-20251109-175540.json  bird-20251113-234113.json  bird-20251113-234814.json  bird-20251114-000331.json  bird-20251114-000511.json  bird-20251114-000845.json  bird-20251114-102322.json  bird-20251114-112249.json  bird-20251114-114617.json  bird-20260128-200321.json  bird-20260128-202055.json  bird-20260128-212105.json  bird-20260128-213005.json  bird-20260129-101733.json  bird-20260129-103033.json  bird-20260129-103854.json  bird-20260129-104731.json  bird-20260129-110504.json  bird-20260129-111831.json  bird-20260129-112729.json  bird-20260129-114233.json  bird-20260129-114740.json  bird-20260129-115141.json  bird-20260129-115740.json  bird-20260129-140400.json  livraria-20251114-113632.json  livraria-20251114-182804.json  livraria-20251114-183230.json
datasets/bird/: README.md
datasets/livraria/: benchmark.json  create_schema.sql  insert_data.sql
tests/: test_generator_retry_context.py  test_schema_prefetch.py  test_tools_clean_sql.py
